--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.54.5",
+    "value-js": "^1.0.0",
+    "values.js": "^2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
